--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <header>
         <h1>Two</h1>
     </header>
+    <nav>
+        <h2>Menu</h2>
+        <ul>
+            <li><a href="abouttwo.html"></a>About Two</li>
+        </ul>
+    </nav>
     <main></main>
     <footer></footer>
 </body>
