--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <h2>Menu</h2>
         <ul>
-            <li><a href="abouttwo.html"></a>About Two</li>
+            <li><a href="abouttwo.html">About Two</a></li>
         </ul>
     </nav>
     <main></main>
