--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="abouttwo.html">About Two</a></li>
-            <li>Contact Two</li>
+            <li><a href="contacttwo.html">Contact Two</a></li>
         </ul>
     </nav>
     <main></main>
